# openc3-cosmos-cfdp

./: .gitignore  LICENSE.md  LICENSE.txt  README.md  Rakefile  openc3-cosmos-cfdp.gemspec  plugin.txt  pyproject.toml
.github/workflows/: playwright.yml  release-cosmos-plugin.yml  release.yml  ruby_unit_tests.yml
docs/: CFDP_Changes_Between_Versions.docx
lib/: cfdp.py  cfdp.rb  cfdp_api.py  cfdp_api.rb
microservices/CFDP/: Gemfile  Gemfile.dev  Gemfile.prod  Rakefile  config.ru  init.sh
microservices/CFDP/app/controllers/: application_controller.rb  cfdp_controller.rb
microservices/CFDP/app/models/: cfdp_checksum.rb  cfdp_crc_checksum.rb  cfdp_mib.rb  cfdp_model.rb  cfdp_null_checksum.rb  cfdp_pdu.rb  cfdp_pdus.rb  cfdp_procedures.rb  cfdp_receive_transaction.rb  cfdp_source_transaction.rb  cfdp_topic.rb  cfdp_transaction.rb  cfdp_user.rb  crc_checksum.rb
microservices/CFDP/config/: application.rb  puma.rb  routes.rb
microservices/CFDP/config/environments/: production.rb
microservices/CFDP/config/initializers/: cfdp_initializer.rb
microservices/CFDP/config/locales/: en.yml
microservices/CFDP/spec/: rails_helper.rb  spec_helper.rb
playwright/: global.setup.ts  package.json  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  storageState.json
playwright/tests/: cfdp.spec.js  cfdp.spec.ts  fixture.ts  global.setup.ts  utilities.ts
targets/CFDPTEST/: target.txt
targets/CFDPTEST/cmd_tlm/: cmd.txt  tlm.txt
targets/CFDPTEST/procedures/: cfdp_test_suite.py  cfdp_test_suite.rb  interrupt_test.rb
tests/: conftest.py  test_cfdp.py  test_cfdp_api.py
(+42 files in other folders)
